--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,14 @@
     "require": {
         "php": "^8.2",
         "greenter/lite": "^5.1",
+        "intervention/image-laravel": "^1.5",
         "jantinnerezo/livewire-alert": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.19",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "luecano/numero-a-letras": "4.0",
         "spatie/laravel-permission": "^6.16"
     },
     "require-dev": {
